Squashed commits into one. Starts using git flow